--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -8,13 +8,15 @@
         <img src="../../../assets/icon-twitter.svg" alt = "twitter logo">
     </div>
   </div>
-  <img class="image-profile" src="../../../assets/image-profile-desktop.webp">
   <div class="title">
+    <div class="text">
     <h2>Nice to meet you!</h2>
     <h2>I'm <em> Adam Keyes.</em></h2>
     <p>based in the UK, I'm a front-end developer</p>
     <p>passionate about building accessible web apps</p>
     <p>that users love.</p>
+  </div>
+    <img class="image-profile" src="../../../assets/image-profile-desktop.webp">
   </div>
   <div class="cotactme">
     <p>contact me</p>
