--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -18,7 +18,7 @@
   </div>
     <img class="image-profile" src="../../../assets/image-profile-desktop.webp">
   </div>
-  <div class="cotactme">
+  <div class="contactme">
     <p>contact me</p>
   </div>
 </header>
